--- a/doc/main.tex
+++ b/doc/main.tex
@@ -309,9 +309,9 @@ Paradygmaty i architektury wykorzystywane przez współczesne frameworki mają b
 \section{Charakterystyka React}
 React jest jedną z najpopularniejszych bibliotek frontendowych wykorzystywanych do budowy interfejsów użytkownika we współczesnych aplikacjach webowych. Został opracowany przez Facebooka w 2013 roku jako odpowiedź na rosnącą złożoność warstwy prezentacji w dużych systemach internetowych oraz potrzebę efektywnego zarządzania licznymi aktualizacjami widoku. React szybko zyskał szerokie zastosowanie w przemyśle dzięki swojej prostocie, modularności oraz nowatorskiemu podejściu do renderowania komponentów \cite{React_Official}.
 
-Podstawą Reacta jest deklaratywny model programowania, w którym programista opisuje, jak interfejs ma wyglądać dla określonego stanu danych, zamiast zarządzać ręcznie operacjami modyfikującymi DOM. Dzięki temu kod jest bardziej przewidywalny, łatwiejszy do utrzymania oraz mniej podatny na błędy związane z ręczną manipulacją strukturą dokumentu. Kluczowym elementem działania Reacta jest również wykorzystanie koncepcji Virtual DOM — lekkiej reprezentacji drzewa elementów, pozwalającej na efektywne określanie minimalnego zakresu zmian potrzebnych do zaktualizowania widoku.
+Podstawą Reacta jest deklaratywny model programowania, w którym programista opisuje, jak interfejs ma wyglądać dla określonego stanu danych, zamiast zarządzać ręcznie operacjami modyfikującymi DOM. Dzięki temu kod jest bardziej przewidywalny, łatwiejszy do utrzymania oraz mniej podatny na błędy związane z ręczną manipulacją strukturą dokumentu \cite{React_Official}. Kluczowym elementem działania Reacta jest również wykorzystanie koncepcji Virtual DOM — lekkiej reprezentacji drzewa elementów, pozwalającej na efektywne określanie minimalnego zakresu zmian potrzebnych do zaktualizowania widoku \cite{React_Up_Running}.
 
-React wprowadza komponentową strukturę aplikacji, w której interfejs podzielony jest na niewielkie, niezależne moduły odpowiadające za określoną funkcjonalność lub fragment widoku. Każdy komponent może posiadać stan lokalny, reagować na zmiany danych oraz uczestniczyć w przepływie informacji w aplikacji. Taki sposób organizacji sprzyja modularności, ponownemu wykorzystaniu kodu oraz tworzeniu aplikacji o wysokiej skalowalności.
+React wprowadza komponentową strukturę aplikacji, w której interfejs podzielony jest na niewielkie, niezależne moduły odpowiadające za określoną funkcjonalność lub fragment widoku \cite{Design_Patterns_JS}. Każdy komponent może posiadać stan lokalny, reagować na zmiany danych oraz uczestniczyć w przepływie informacji w aplikacji. Taki sposób organizacji sprzyja modularności, ponownemu wykorzystaniu kodu oraz tworzeniu aplikacji o wysokiej skalowalności \cite{React_Up_Running}.
 
 \begin{lstlisting}[language=tsx, caption={Przykładowy komponent funkcjonalny w React wykorzystujący składnię JSX.}, label={lst:react-component-example}]
 import React from 'react';
@@ -506,7 +506,7 @@ Podsumowując, React w połączeniu z TypeScriptem stanowi wydajne i przewidywal
 Angular to kompleksowa platforma i framework programistyczny typu open source, rozwijany przez firmę Google, przeznaczony do budowy rozbudowanych, skalowalnych aplikacji webowych \cite{Angular_Docs}. W przeciwieństwie do Reacta, Angular oferuje pełny, zintegrowany ekosystem narzędzi, realizując batteries-included approach (\textit{podejście z kompletem wbudowanych rozwiązań}), dostarczając ustandaryzowane rozwiązania dla DI (Dependency Injection), obsługi formularzy, routingu oraz komunikacji asynchronicznej.
 
 \subsection{Architektura komponentowa i nowoczesne mechanizmy reaktywności}
-Architektura Angulara opiera się na hierarchii komponentów i ścisłej separacji logiki od widoku. W przeciwieństwie do Reacta, Angular standardowo oddziela definicję szablonu (HTML), stylów (CSS) oraz logiki (TypeScript) na poziomie plików lub odrębnych sekcji wewnątrz dekoratora komponentu.
+Architektura Angulara opiera się na hierarchii komponentów i ścisłej separacji logiki od widoku \cite{Angular_Development}. W przeciwieństwie do Reacta, Angular standardowo oddziela definicję szablonu (HTML), stylów (CSS) oraz logiki (TypeScript) na poziomie plików lub odrębnych sekcji wewnątrz dekoratora komponentu.
 
 \begin{lstlisting}[language=tsx, caption={Struktura komponentu w Angularze z wykorzystaniem dekoratora \texttt{@Component}.}, label={lst:angular-component-structure}]
 @Component({
@@ -526,13 +526,13 @@ export class UserComponent {
 \end{lstlisting}
 \source{Opracowanie własne}
 
-Współczesny Angular (od wersji 17+) przeszedł rewolucję dzięki wprowadzeniu signals (\textit{sygnałów}), których szczegółową specyfikację opisano w ramach propozycji zmian architektonicznych \cite{Angular_Signals_RFC}. Signals pozwalają frameworkowi na precyzyjne śledzenie zależności — fine-grained reactivity (\textit{reaktywność o drobnej ziarnistości}), co oznacza, że Angular wie dokładnie, która część szablonu zależy od której wartości stanu.
+Współczesny Angular (od wersji 17+) przeszedł rewolucję dzięki wprowadzeniu signals (\textit{sygnałów}), których szczegółową specyfikację opisano w ramach propozycji zmian architektonicznych \cite{Angular_Signals_RFC}. Signals pozwalają frameworkowi na precyzyjne śledzenie zależności — fine-grained reactivity (\textit{reaktywność o drobnej ziarnistości}), co oznacza, że Angular wie dokładnie, która część szablonu zależy od której wartości stanu \cite{Angular_Docs}.
 
-Tradycyjny model detekcji zmian oparty na \texttt{Zone.js} monitorował wszystkie asynchroniczne zdarzenia i sprawdzał całe drzewa komponentów. Podejście oparte na Sygnałach pozwala na budowę aplikacji typu \textit{Zoneless}, gdzie proces aktualizacji widoku jest wyzwalany tylko tam, gdzie faktycznie nastąpiła zmiana danych, co drastycznie redukuje narzut obliczeniowy w aplikacjach o wysokiej dynamice, takich jak wizualizery algorytmów.
+Tradycyjny model detekcji zmian oparty na \texttt{Zone.js} monitorował wszystkie asynchroniczne zdarzenia i sprawdzał całe drzewa komponentów \cite{Angular_Development}. Podejście oparte na Sygnałach pozwala na budowę aplikacji typu \textit{Zoneless}, gdzie proces aktualizacji widoku jest wyzwalany tylko tam, gdzie faktycznie nastąpiła zmiana danych, co drastycznie redukuje narzut obliczeniowy w aplikacjach o wysokiej dynamice, takich jak wizualizery algorytmów.
 
-Kluczową koncepcją organizacyjną do niedawna były moduły (\textit{NgModules}), które grupowały logicznie powiązane komponenty, dyrektywy, potoki i serwisy. Moduły pozwalały na precyzyjne zarządzanie widocznością elementów oraz optymalizację procesu ładowania aplikacji poprzez technologię \textit{lazy loading}. W najnowszych wersjach frameworka wprowadzono tzw. \textit{Standalone Components}, które upraszczają architekturę, eliminując konieczność definiowania modułów dla każdego elementu, co redukuje tzw. \textit{boilerplate code}. Terminem tym określa się powtarzalne fragmenty kodu or charakterze konfiguracyjnym, które są niezbędne do poprawnego działania struktur programu, lecz nie wnoszą bezpośredniej logiki biznesowej i mogą utrudniać analizę właściwej funkcjonalności aplikacji.
+Kluczową koncepcją organizacyjną do niedawna były moduły (\textit{NgModules}), które grupowały logicznie powiązane komponenty, dyrektywy, potoki i serwisy \cite{Angular_Docs}. Moduły pozwalały na precyzyjne zarządzanie widocznością elementów oraz optymalizację procesu ładowania aplikacji poprzez technologię \textit{lazy loading}. W najnowszych wersjach frameworka wprowadzono tzw. \textit{Standalone Components}, które upraszczają architekturę, eliminując konieczność definiowania modułów dla każdego elementu, co redukuje tzw. \textit{boilerplate code}. Terminem tym określa się powtarzalne fragmenty kodu or charakterze konfiguracyjnym, które są niezbędne do poprawnego działania struktur programu, lecz nie wnoszą bezpośredniej logiki biznesowej i mogą utrudniać analizę właściwej funkcjonalności aplikacji.
 
-Fundamentalnym mechanizmem Angulara, determinującym jego wydajność, jest system detekcji zmian (\textit{Change Detection}). Framework monitoruje stan aplikacji i automatycznie aktualizuje widok, gdy wykryje zmiany w modelach danych. Przez lata mechanizm ten opierał się na bibliotece \textit{Zone.js}, która monitoruje asynchroniczne zdarzenia i uruchamia proces sprawdzania całego drzewa komponentów. Nowoczesne wersje Angulara wprowadzają wspomniany mechanizm \textit{Signals}, który pozwala na precyzyjne śledzenie zależności i informuje framework dokładnie o tym, która część szablonu wymaga odświeżenia. Umożliwia to znaczącą redukcję narzutu obliczeniowego, szczególnie w aplikacjach z dużą liczbą dynamicznych aktualizacji.
+Fundamentalnym mechanizmem Angulara, determinującym jego wydajność, jest system detekcji zmian (\textit{Change Detection}) \cite{Angular_Docs}. Framework monitoruje stan aplikacji i automatycznie aktualizuje widok, gdy wykryje zmiany w modelach danych. Przez lata mechanizm ten opierał się na bibliotece \textit{Zone.js}, która monitoruje asynchroniczne zdarzenia i uruchamia proces sprawdzania całego drzewa komponentów. Nowoczesne wersje Angulara wprowadzają wspomniany mechanizm \textit{Signals}, który pozwala na precyzyjne śledzenie zależności i informuje framework dokładnie o tym, która część szablonu wymaga odświeżenia. Umożliwia to znaczącą redukcję narzutu obliczeniowego, szczególnie w aplikacjach z dużą liczbą dynamicznych aktualizacji \cite{Learning_TS}.
 
 \begin{figure}[h]
     \centering
@@ -701,7 +701,7 @@ Aplikacja w wersji React została zaprojektowana i zrealizowana z wykorzystaniem
 \subsection{Architektura projektu i stos technologiczny}
 Struktura projektu opiera się na nowoczesnym podejściu do budowania aplikacji typu Single Page Application (SPA) \cite{SPA_Definition}, gdzie kluczową rolę odgrywa wyraźna separacja logiki biznesowej od warstwy prezentacji. Wykorzystano bibliotekę React Router v7 do obsługi nawigacji, co umożliwiło płynne przejścia między stroną powitalną (\textit{Landing Page}), wprowadzającą w tematykę badań, a głównym panelem badawczym (\textit{Dashboard}), w którym odbywa się właściwa wizualizacja. Warstwa wizualna została zbudowana w oparciu o modularną bibliotekę komponentów, co zapewnia spójność interfejsu i ułatwia jego modyfikację. Centralnym punktem aplikacji jest komponent \texttt{SortingProgressChart}, który pełni funkcję dynamicznego płótna dla algorytmów.
 
-Wybór narzędzi deweloperskich był podyktowany chęcią uzyskania jak najwyższej wydajności nie tylko w fazie uruchomieniowej, ale i deweloperskiej. Jako system budowania wykorzystano Vite \cite{Vite_Official}, który dzięki zastosowaniu natywnych modułów ES \cite{ECMAScript_6} w trybie deweloperskim oraz silnika Rollup w trybie budowania produkcyjnego, zapewnia niemal natychystowe odświeżanie zmian. Stylizacja opiera się na najnowszej wersji Tailwind CSS v4, która wprowadza nowy silnik generowania stylów i pozwala na implementację zaawansowanych efektów wizualnych, takich jak \textit{glassmorphism} (efekt oszronionego szkła) \cite{Tailwind_Official}. Aby przyspieszyć proces tworzenia interfejsu bez utraty kontroli nad jakością kodu, włączono do projektu zestaw komponentów Shadcn/ui. Biblioteka ta, w przeciwieństwie do tradycyjnych pakietów NPM, dostarcza kod źródłowy komponentów bezpośrednio do projektu, co pozwala na ich pełną personalizację pod kątem specyficznych wymagań wydajnościowych wizualizatora.
+Wybór narzędzi deweloperskich był podyktowany chęcią uzyskania jak najwyższej wydajności nie tylko w fazie uruchomieniowej, ale i deweloperskiej. Jako system budowania wykorzystano Vite \cite{Vite_Official}, który dzięki zastosowaniu natywnych modułów ES \cite{ECMAScript_6} w trybie deweloperskim oraz silnika Rollup w trybie budowania produkcyjnego, zapewnia niemal natychystowe odświeżanie zmian. Stylizacja opiera się na najnowszej wersji Tailwind CSS v4, która wprowadza nowy silnik generowania stylów i pozwala na implementację zaawansowanych efektów wizualnych, takich jak \textit{glassmorphism} (efekt oszronionego szkła) \cite{Tailwind_Official}. Aby przyspieszyć proces tworzenia interfejsu bez utraty kontroli nad jakością kodu, włączono do projektu zestaw komponentów Shadcn/ui \cite{Shadcn_UI}. Biblioteka ta, w przeciwieństwie do tradycyjnych pakietów NPM, dostarcza kod źródłowy komponentów bezpośrednio do projektu, co pozwala na ich pełną personalizację pod kątem specyficznych wymagań wydajnościowych wizualizatora.
 
 Dodatkowym atutem wybranego stosu jest pełna integracja ze środowiswem TypeScript \cite{TypeScript_Official}. Każdy komponent posiada ściśle zdefiniowany interfejs (\textit{props}), co eliminuje błędy związane z przekazywaniem nieprawidłowych danych w trakcie intensywnej pracy algorytmu \cite{Learning_TS}. Wykorzystanie \textit{Utility Types} pozwoliło na tworzenie elastycznych wariantów ułożenia słupków wykresu w zależności od rozdzielczości ekranu.
 
@@ -746,7 +746,7 @@ Architektura aplikacji Angular została zaprojektowana zgodnie z paradygmatem \t
 
 Logika aplikacji została zorganizowana w modularne warstwy o jasno zdefiniowanych odpowiedzialnościach. Centralnym elementem są serwisy rdzeniowe (\textit{Core Services}), które dzięki systemowi wstrzykiwania zależności (\textit{Dependency Injection}) pełnią rolę niezależnych silników obliczeniowych \cite{Angular_Development}. To właśnie w nich zamknięto logikę algorytmów sortowania, izolując ją od cyklu życia komponentów wizualnych. Warstwa prezentacji skupia się wokół komponentu \textit{Visualizer Dashboard}, który integruje dynamiczne parametry wejściowe (takie jak rozmiar tablicy czy wybór algorytmu) z silnikiem renderującym.
 
-Stos technologiczny Angulara został celowo dobrany tak, aby stanowił bezpośredni punkt odniesienia dla wersji React. Wykorzystanie oficjalnego narzędzia Angular CLI zapewnia stabilny i powtarzalny proces budowania, wykorzystujący pod maską silnik Esbuild. Stylizacja interfejsu opiera się na Tailwind CSS v4, co gwarantuje, że różnice w wydajności nie będą wynikać z odmiennych arkuszy stylów. Jako bibliotekę wizualizacji wybrano Ngx-Charts \cite{Bober_Angular}, która została zintegrowana w sposób zapewniający płynną współpracę z nowym mechanizmem detekcji zmian. Aby zapewnić profesjonalny wygląd i wysoką dostępność interfejsu użytkownika, wdrożono zestaw komponentów PrimeNG.
+Stos technologiczny Angulara został celowo dobrany tak, aby stanowił bezpośredni punkt odniesienia dla wersji React. Wykorzystanie oficjalnego narzędzia Angular CLI zapewnia stabilny i powtarzalny proces budowania, wykorzystujący pod maską silnik Esbuild \cite{Esbuild_Official}. Stylizacja interfejsu opiera się na Tailwind CSS v4, co gwarantuje, że różnice w wydajności nie będą wynikać z odmiennych arkuszy stylów. Jako bibliotekę wizualizacji wybrano Ngx-Charts \cite{Bober_Angular}, która została zintegrowana w sposób zapewniający płynną współpracę z nowym mechanizmem detekcji zmian. Aby zapewnić profesjonalny wygląd i wysoką dostępność interfejsu użytkownika, wdrożono zestaw komponentów PrimeNG \cite{PrimeNG_Docs}.
 
 \subsection{Integracja z PrimeNG i Optymalizacja PrimeFlex}
 Wybór PrimeNG jako biblioteki komponentów UI był podyktowany jej natywnym wsparciem dla Sygnałów w wersji 19. Dzięki temu komponenty takie jak suwaki prędkości (\textit{Sliders}), przyciski sterujące czy menu wyboru algorytmu, reagują na zmiany stanu bez żadnego narzutu obliczeniowego. Wykorzystano również system PrimeFlex do budowy responsywnego układu Dashboardu.
