--- a/doc/references.bib
+++ b/doc/references.bib
@@ -440,3 +440,23 @@
   url       = {https://media.beehiiv.com/cdn-cgi/image/fit=scale-down,format=auto,onerror=redirect,quality=80/uploads/asset/file/051c845e-8e6c-4a15-b822-4a6ca3c41ffb/1_6e8V1ciJnfuYLBXywqer6Q.jpg},
   note      = "Dostęp: 25.01.2026"
 }
+@misc{Shadcn_UI,
+  author    = "{shadcn}",
+  title     = "{shadcn/ui: Beautifully designed components that you can copy and paste into your apps}",
+  howpublished = {\url{https://ui.shadcn.com/}},
+  note      = "Dostęp: 12.01.2026"
+}
+
+@misc{PrimeNG_Docs,
+  author    = "{PrimeTek}",
+  title     = "{PrimeNG: The Most Complete UI Component Library for Angular}",
+  howpublished = {\url{https://primeng.org/}},
+  note      = "Dostęp: 12.01.2026"
+}
+
+@misc{Esbuild_Official,
+  author    = "{Evan Wallace}",
+  title     = "{esbuild: An extremely fast JavaScript bundler}",
+  howpublished = {\url{https://esbuild.github.io/}},
+  note      = "Dostęp: 12.01.2026"
+}
